--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <div id="bmi">
         <img src="https://images-na.ssl-images-amazon.com/images/I/818TRjDjv8L.png" alt="bmi image">
-        <label >Height (cm)</label>
+        <label class='label' >Height (cm)</label>
         <input  class="height" type="text">
-        <label  >Weight (kg)</label>
+        <label class='labelone'  >Weight (kg)</label>
         <input  class="weight" type="text">
         <button class="but">Calculate</button>
     </div>
